# gapi/rpc_create_user.go
@@ -6,9 +6,17 @@ import (
 	db "simplebank/db/sqlc"
 	"simplebank/pb"
 	"simplebank/util"
+	"simplebank/val"
+
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
 )
 
 func (server *Server) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
+	violations := validateCreateUserRequest(req)
+	if len(violations) > 0 {
+		return nil, invalidArgumentError(violations)
+	}
+
 	hashedPassword, err := util.HashPassword(req.Password)
 	if err != nil {
 		return nil, fmt.Errorf("failed to hash password: %w", err)
@@ -30,4 +38,22 @@ func (server *Server) CreateUser(ctx context.Context, req *pb.CreateUserRequest)
 		User: convertUser(user),
 	}
 	return rsp, nil
+}
+
+func validateCreateUserRequest(req *pb.CreateUserRequest) []*errdetails.BadRequest_FieldViolation {
+	var violations []*errdetails.BadRequest_FieldViolation
+	if err := val.ValidateUsername(req.Username); err != nil {
+		violations = append(violations, fieldViolations("username", err))
+	}
+	if err := val.ValidatePassword(req.Password); err != nil {
+		violations = append(violations, fieldViolations("password", err))
+	}
+	if err := val.ValidateFullName(req.FullName); err != nil {
+		violations = append(violations, fieldViolations("full_name", err))
+	}
+	if err := val.ValidateEmail(req.Email); err != nil {
+		violations = append(violations, fieldViolations("email", err))
+	}
+
+	return violations
 }
